--- a/docroot/themes/iucn_who/less/theme/views.less
+++ b/docroot/themes/iucn_who/less/theme/views.less
@@ -6,7 +6,7 @@
   .views-row {
     padding-left: .5em;
     padding-top: 1em;
-    flex: 1;
+    flex: 0 1;
     @media (min-width: @screen-lg-min) {
       flex-basis: 32%; // ~(100% / 3);
       &:nth-child(3n + 1) {
